--- a/autoexec.cfg
+++ b/autoexec.cfg
@@ -25,14 +25,19 @@ cl_showloadout 0 // hides the inventory on the right hand side
 
 //Crosshair
 cl_crosshair_drawoutline "1"
-cl_crosshairalpha "255"
-cl_crosshaircolor "4"
+cl_crosshairalpha "200"
+cl_crosshaircolor "1"
+cl_crosshaircolor_b "50"
+cl_crosshaircolor_r "250"
+cl_crosshaircolor_g "250"
 cl_crosshairdot "0"
-cl_crosshairsize "0.5"
-cl_crosshairthickness "0"
+cl_crosshairsize "1"
+cl_crosshairthickness "1"
 cl_crosshairusealpha "1"
 cl_crosshairgap "0"
 cl_crosshairstyle "4"
+
+
 
 //Binds
 bind mwheeldown +jump
@@ -42,12 +47,12 @@ bind d "+moveright;r_cleardecals"
 
 
 //Net Graph position
-net_graphheight 730
+net_graphheight 994
 net_graphproportionalfont 0
 net_graphpos 1
 
 //Sens
-sensitivity "2.22"
+sensitivity "2"
 
 //Viewmodel
 viewmodel_fov "60"
