--- a/autoexec.cfg
+++ b/autoexec.cfg
@@ -13,38 +13,40 @@ fps_max "289"
 //use raw mouse input
 m_rawinput "1"
 
+cl_autowepswitch 0
+
 //Sound Settings
 voice_mixer_volume "0.50"
-windows_speaker_config 6
+volume "0.5"
 snd_mixahead "0.05"
 snd_musicvolume "0.0"
+windows_speaker_config "1"
+
+
 
 r_drawtracers_firstperson "0" //Disable first person tracers
 r_eyegloss "0" // No eye gloss
 cl_showloadout 0 // hides the inventory on the right hand side
 
 //Crosshair
-cl_crosshair_drawoutline "1"
-cl_crosshairalpha "200"
+cl_crosshair_drawoutline "0"
+cl_crosshairalpha "255"
 cl_crosshaircolor "1"
 cl_crosshaircolor_b "50"
 cl_crosshaircolor_r "250"
 cl_crosshaircolor_g "250"
 cl_crosshairdot "0"
-cl_crosshairsize "1"
+cl_crosshairsize "3"
 cl_crosshairthickness "1"
 cl_crosshairusealpha "1"
-cl_crosshairgap "0"
+cl_crosshairgap "-1.5"
 cl_crosshairstyle "4"
-
-
 
 //Binds
 bind mwheeldown +jump
 bind mwheelup slot10
 bind a "+moveleft;r_cleardecals"
 bind d "+moveright;r_cleardecals"
-
 
 //Net Graph position
 net_graphheight 994
@@ -55,7 +57,7 @@ net_graphpos 1
 sensitivity "2"
 
 //Viewmodel
-viewmodel_fov "60"
+viewmodel_fov "68"
 viewmodel_offset_x "2.5"
 viewmodel_offset_y "2"
 viewmodel_offset_z "-2"
