--- a/autoexec.cfg
+++ b/autoexec.cfg
@@ -17,12 +17,10 @@ cl_autowepswitch 0
 
 //Sound Settings
 voice_mixer_volume "0.50"
-volume "0.5"
+volume "0.27"
 snd_mixahead "0.05"
 snd_musicvolume "0.0"
 windows_speaker_config "1"
-
-
 
 r_drawtracers_firstperson "0" //Disable first person tracers
 r_eyegloss "0" // No eye gloss
@@ -31,7 +29,7 @@ cl_showloadout 0 // hides the inventory on the right hand side
 //Crosshair
 cl_crosshair_drawoutline "0"
 cl_crosshairalpha "255"
-cl_crosshaircolor "1"
+cl_crosshaircolor "5"
 cl_crosshaircolor_b "50"
 cl_crosshaircolor_r "250"
 cl_crosshaircolor_g "250"
@@ -39,7 +37,7 @@ cl_crosshairdot "0"
 cl_crosshairsize "3"
 cl_crosshairthickness "1"
 cl_crosshairusealpha "1"
-cl_crosshairgap "-1.5"
+cl_crosshairgap "-3"
 cl_crosshairstyle "4"
 
 //Binds
@@ -49,15 +47,16 @@ bind a "+moveleft;r_cleardecals"
 bind d "+moveright;r_cleardecals"
 
 //Net Graph position
-net_graphheight 994
+net_graphheight 930
 net_graphproportionalfont 0
-net_graphpos 1
+net_graphpos 2
+net_graph 0
 
 //Sens
-sensitivity "2"
+sensitivity "1.9"
 
 //Viewmodel
-viewmodel_fov "68"
+viewmodel_fov "60"
 viewmodel_offset_x "2.5"
 viewmodel_offset_y "2"
 viewmodel_offset_z "-2"
