--- a/autoexec.cfg
+++ b/autoexec.cfg
@@ -28,17 +28,24 @@ cl_showloadout 0 // hides the inventory on the right hand side
 
 //Crosshair
 cl_crosshair_drawoutline "0"
-cl_crosshairalpha "255"
+cl_crosshairalpha "250"
 cl_crosshaircolor "5"
-cl_crosshaircolor_b "50"
-cl_crosshaircolor_r "250"
-cl_crosshaircolor_g "250"
+cl_crosshaircolor_b "100"
+cl_crosshaircolor_r "0"
+cl_crosshaircolor_g "150"
 cl_crosshairdot "0"
-cl_crosshairsize "3"
+cl_crosshairsize "2.5"
 cl_crosshairthickness "1"
 cl_crosshairusealpha "1"
-cl_crosshairgap "-3"
+cl_crosshairgap "-2"
 cl_crosshairstyle "4"
+
+//HUD 
+cl_hud_color 1
+cl_hud_background_alpha 1
+cl_hud_playercount_pos 1
+cl_hud_playercount_showcount 1
+cl_hud_radar_scale 0.69
 
 //Binds
 bind mwheeldown +jump
@@ -53,11 +60,11 @@ net_graphpos 2
 net_graph 0
 
 //Sens
-sensitivity "1.9"
+sensitivity "1"
 
 //Viewmodel
-viewmodel_fov "60"
-viewmodel_offset_x "2.5"
+viewmodel_fov "64"
+viewmodel_offset_x "1.5"
 viewmodel_offset_y "2"
 viewmodel_offset_z "-2"
 
@@ -75,13 +82,16 @@ cl_forcepreload "1"
 // Radar Scale
 cl_radar_scale 0.4
 
-cl_mute_enemy_team 1
+//Mute enemy team? 0 = no | 1 = yes
+cl_mute_enemy_team 0
 
 //Printing Message
-echo " "
-echo " "
-echo " "
-echo "config loaded"
-echo " "
-echo " "
-echo " "
+echo "  "
+echo " - "
+echo " -- "
+echo " --- "
+echo " ---- autoexec loaded successfully"
+echo " --- "
+echo " -- "
+echo " - "
+echo "  "
