--- a/autoexec.cfg
+++ b/autoexec.cfg
@@ -7,7 +7,7 @@ cl_cmdrate "128"
 cl_updaterate "128"
 rate "128000"
 
-//fps max 144 fps x 2 = 288 +1 = 289 / Why? Cuz i can
+//Fps max
 fps_max "289"
 
 //use raw mouse input
@@ -16,13 +16,12 @@ m_rawinput "1"
 cl_autowepswitch 0
 
 //Sound Settings
-voice_mixer_volume "0.50"
+voice_mixer_volume "1.00"
 volume "0.27"
-snd_mixahead "0.05"
+snd_mixahead "0.025"
 snd_musicvolume "0.0"
-windows_speaker_config "1"
 
-r_drawtracers_firstperson "0" //Disable first person tracers
+r_drawtracers_firstperson "0" 
 r_eyegloss "0" // No eye gloss
 cl_showloadout 0 // hides the inventory on the right hand side
 
@@ -60,7 +59,7 @@ net_graphpos 2
 net_graph 0
 
 //Sens
-sensitivity "1"
+sensitivity "0.89"
 
 //Viewmodel
 viewmodel_fov "64"
@@ -86,12 +85,12 @@ cl_radar_scale 0.4
 cl_mute_enemy_team 0
 
 //Printing Message
-echo "  "
 echo " - "
 echo " -- "
 echo " --- "
-echo " ---- autoexec loaded successfully"
+echo " ---- "
+echo " ----- autoexec loaded successfully"
+echo " ---- "
 echo " --- "
 echo " -- "
 echo " - "
-echo "  "
