--- a/autoexec.cfg
+++ b/autoexec.cfg
@@ -1,31 +1,31 @@
-//RMK Autoexec
+////////////RMK AUTOEXEC///////////
+/////Feel Free to use or change////
+///////////////////////////////////
 
-//Rates
+
+
+/////////Rates///////////////
 cl_interp "0"
 cl_interp_ratio "1"
 cl_cmdrate "128"
 cl_updaterate "128"
 rate "128000"
 
-//Fps max
-fps_max "289"
-
-//use raw mouse input
-m_rawinput "1"
-
+/////////Misc////////////////
 cl_autowepswitch 0
+m_rawinput "1"
+fps_max "289"
+r_drawtracers_firstperson "0"
+r_eyegloss "0"
+cl_showloadout 0
 
-//Sound Settings
+/////////Sound Settings//////
 voice_mixer_volume "1.00"
 volume "0.27"
 snd_mixahead "0.025"
 snd_musicvolume "0.0"
 
-r_drawtracers_firstperson "0" 
-r_eyegloss "0" // No eye gloss
-cl_showloadout 0 // hides the inventory on the right hand side
-
-//Crosshair
+/////////Crosshair///////////
 cl_crosshair_drawoutline "0"
 cl_crosshairalpha "250"
 cl_crosshaircolor "5"
@@ -39,35 +39,46 @@ cl_crosshairusealpha "1"
 cl_crosshairgap "-2"
 cl_crosshairstyle "4"
 
-//HUD 
+/////////HUD/////////////////
 cl_hud_color 1
 cl_hud_background_alpha 1
 cl_hud_playercount_pos 1
 cl_hud_playercount_showcount 1
 cl_hud_radar_scale 0.69
 
-//Binds
+/////////Binds///////////////
+
+//Mousewheel Down Jump
 bind mwheeldown +jump
+
+//Mousewheel Up Inspect Weapon
 bind mwheelup slot10
+
+//Bind A and D to remove decals (blood etc). Can take performance if bad pc.
 bind a "+moveleft;r_cleardecals"
 bind d "+moveright;r_cleardecals"
 
-//Net Graph position
+/////////Net Graph///////////
+
 net_graphheight 930
 net_graphproportionalfont 0
 net_graphpos 2
+
+//Enable Netgraph?   1 yes | 0 no
 net_graph 0
 
-//Sens
+/////////Sens////////////////
+
+//Sensitivity
 sensitivity "0.89"
 
-//Viewmodel
+/////////Viewmodel///////////
 viewmodel_fov "64"
 viewmodel_offset_x "1.5"
 viewmodel_offset_y "2"
 viewmodel_offset_z "-2"
 
-//Viewmodel Movement
+/////////Remove Headbob//////
 cl_viewmodel_shift_left_amt "0"
 cl_viewmodel_shift_right_amt "0"
 cl_bob_lower_amt "0"
@@ -75,16 +86,14 @@ cl_bobamt_lat "0"
 cl_bobamt_vert "0"
 cl_bobcycle "0"
 
-//Preload Map
+/////////Preload Map////////
 cl_forcepreload "1"
 
-// Radar Scale
+/////////Radar Scale////////
 cl_radar_scale 0.4
 
-//Mute enemy team? 0 = no | 1 = yes
-cl_mute_enemy_team 0
-
-//Printing Message
+//////Printing Message//////
+//Prints a message to Console telling you the autoexec is loaded.
 echo " - "
 echo " -- "
 echo " --- "
