--- a/autoexec.cfg
+++ b/autoexec.cfg
@@ -21,7 +21,7 @@ cl_showloadout 0
 
 /////////Sound Settings//////
 voice_mixer_volume "1.00"
-volume "0.27"
+volume "0.45"
 snd_mixahead "0.025"
 snd_musicvolume "0.0"
 
@@ -75,7 +75,7 @@ sensitivity "2"
 /////////Viewmodel///////////
 viewmodel_fov "55"
 viewmodel_offset_x "2.5"
-viewmodel_offset_y "2"
+viewmodel_offset_y "-2"
 viewmodel_offset_z "-2"
 
 /////////Remove Headbob//////
@@ -86,20 +86,15 @@ cl_bobamt_lat "0"
 cl_bobamt_vert "0"
 cl_bobcycle "0"
 
-/////////Preload Map////////
+///@@Preload Map@@//
 cl_forcepreload "1"
 
-/////////Radar Scale////////
+///@@Radar Scale@@//
 cl_radar_scale 0.4
 
-//////Printing Message//////
+///@@Printing Message@@//
 //Prints a message to Console telling you the autoexec is loaded.
-echo " - "
-echo " -- "
-echo " --- "
-echo " ---- "
-echo " ----- autoexec loaded successfully"
-echo " ---- "
-echo " --- "
-echo " -- "
-echo " - "
+
+echo " @@@ "
+echo " @@@ Autoexec.cfg loaded successfully"
+echo " @@@ "
