--- a/autoexec.cfg
+++ b/autoexec.cfg
@@ -1,10 +1,4 @@
-////////////RMK AUTOEXEC///////////
-/////Feel Free to use or change////
-///////////////////////////////////
-
-
-
-/////////Rates///////////////
+//Rates
 cl_interp "0"
 cl_interp_ratio "1"
 cl_cmdrate "128"
