--- a/autoexec.cfg
+++ b/autoexec.cfg
@@ -1,28 +1,13 @@
-//Rates
-cl_interp "0"
-cl_interp_ratio "1"
-cl_cmdrate "128"
-cl_updaterate "128"
-rate "128000"
+//RMK AUTOEXEC
 
-/////////Misc////////////////
-cl_autowepswitch 0
-m_rawinput "1"
-fps_max "289"
-r_drawtracers_firstperson "0"
-r_eyegloss "0"
-cl_showloadout 0
 
-/////////Sound Settings//////
-voice_mixer_volume "1.00"
-volume "0.45"
-snd_mixahead "0.025"
-snd_musicvolume "0.0"
+//Sensitivity
+sensitivity "2"
 
-/////////Crosshair///////////
+//CROSSHAIR
 cl_crosshair_drawoutline "0"
 cl_crosshairalpha "250"
-cl_crosshaircolor "5"
+cl_crosshaircolor "1"
 cl_crosshaircolor_b "100"
 cl_crosshaircolor_r "0"
 cl_crosshaircolor_g "150"
@@ -30,17 +15,45 @@ cl_crosshairdot "0"
 cl_crosshairsize "3"
 cl_crosshairthickness "0.5"
 cl_crosshairusealpha "1"
-cl_crosshairgap "0"
+cl_crosshairgap "-1"
 cl_crosshairstyle "4"
 
-/////////HUD/////////////////
+//Viewmodel
+viewmodel_fov "68"
+viewmodel_offset_x "2.5"
+viewmodel_offset_y "-2"
+viewmodel_offset_z "-2"
+
+//MISC
+cl_autowepswitch 0
+m_rawinput "1"
+fps_max "289"
+r_drawtracers_firstperson "0"
+r_eyegloss "0"
+cl_showloadout 0
+
+//Sound Settings
+voice_mixer_volume "1.00"
+volume "0.45"
+snd_mixahead "0.025"
+snd_musicvolume "0.0"
+
+
+//HUD
 cl_hud_color 1
 cl_hud_background_alpha 1
 cl_hud_playercount_pos 1
 cl_hud_playercount_showcount 1
 cl_hud_radar_scale 0.69
 
-/////////Binds///////////////
+//Rates
+cl_interp "0"
+cl_interp_ratio "1"
+cl_cmdrate "128"
+cl_updaterate "128"
+rate "128000"
+
+//BINDS
 
 //Mousewheel Down Jump
 bind mwheeldown +jump
@@ -52,27 +65,15 @@ bind mwheelup slot10
 bind a "+moveleft;r_cleardecals"
 bind d "+moveright;r_cleardecals"
 
-/////////Net Graph///////////
+
+//Net Graph
 
 net_graphheight 930
 net_graphproportionalfont 0
 net_graphpos 2
-
-//Enable Netgraph?   1 yes | 0 no
 net_graph 0
 
-/////////Sens////////////////
-
-//Sensitivity
-sensitivity "2"
-
-/////////Viewmodel///////////
-viewmodel_fov "55"
-viewmodel_offset_x "2.5"
-viewmodel_offset_y "-2"
-viewmodel_offset_z "-2"
-
-/////////Remove Headbob//////
+//Headbob
 cl_viewmodel_shift_left_amt "0"
 cl_viewmodel_shift_right_amt "0"
 cl_bob_lower_amt "0"
@@ -80,15 +81,15 @@ cl_bobamt_lat "0"
 cl_bobamt_vert "0"
 cl_bobcycle "0"
 
-///@@Preload Map@@//
+//Preload Map
 cl_forcepreload "1"
 
-///@@Radar Scale@@//
+//Radar Scale
 cl_radar_scale 0.4
 
-///@@Printing Message@@//
-//Prints a message to Console telling you the autoexec is loaded.
+//Printing Message
 
-echo " @@@ "
-echo " @@@ Autoexec.cfg loaded successfully"
-echo " @@@ "
+
+echo " @@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@ "
+echo " @@@ Autoexec.cfg loaded successfully @@@ "
+echo " @@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@ "
