--- a/autoexec.cfg
+++ b/autoexec.cfg
@@ -2,24 +2,24 @@
 
 
 //Sensitivity
-sensitivity "2"
+sensitivity "2.5"
 
 //CROSSHAIR
 cl_crosshair_drawoutline "0"
 cl_crosshairalpha "250"
-cl_crosshaircolor "1"
+cl_crosshaircolor "4"
 cl_crosshaircolor_b "100"
 cl_crosshaircolor_r "0"
 cl_crosshaircolor_g "150"
 cl_crosshairdot "0"
 cl_crosshairsize "3"
-cl_crosshairthickness "0.5"
+cl_crosshairthickness "0"
 cl_crosshairusealpha "1"
-cl_crosshairgap "-1"
+cl_crosshairgap "0"
 cl_crosshairstyle "4"
 
 //Viewmodel
-viewmodel_fov "68"
+viewmodel_fov "62"
 viewmodel_offset_x "2.5"
 viewmodel_offset_y "-2"
 viewmodel_offset_z "-2"
@@ -89,7 +89,8 @@ cl_radar_scale 0.4
 
 //Printing Message
 
-
+echo " "
 echo " @@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@ "
 echo " @@@ Autoexec.cfg loaded successfully @@@ "
 echo " @@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@ "
+echo " "
