--- a/autoexec.cfg
+++ b/autoexec.cfg
@@ -12,11 +12,12 @@ cl_crosshaircolor_b "100"
 cl_crosshaircolor_r "0"
 cl_crosshaircolor_g "150"
 cl_crosshairdot "0"
-cl_crosshairsize "3"
+cl_crosshairsize "2"
 cl_crosshairthickness "0"
 cl_crosshairusealpha "1"
-cl_crosshairgap "0"
+cl_crosshairgap "-3"
 cl_crosshairstyle "4"
+cl_crosshairgap_useweaponvalue 1 //Change gap on different weapons
 
 //Viewmodel
 viewmodel_fov "62"
