--- a/autoexec.cfg
+++ b/autoexec.cfg
@@ -1,51 +1,54 @@
 //RMK AUTOEXEC
 
-
 //Sensitivity
-sensitivity "2.5"
+sensitivity "1.44"
 
 //CROSSHAIR
 cl_crosshair_drawoutline "0"
 cl_crosshairalpha "250"
-cl_crosshaircolor "4"
-cl_crosshaircolor_b "100"
-cl_crosshaircolor_r "0"
-cl_crosshaircolor_g "150"
-cl_crosshairdot "0"
+cl_crosshaircolor "2"
+cl_crosshaircolor_b "0" //unset
+cl_crosshaircolor_r "0" //unset
+cl_crosshaircolor_g "0" //unset
+cl_crosshairdot "0" 
 cl_crosshairsize "2"
 cl_crosshairthickness "0"
 cl_crosshairusealpha "1"
-cl_crosshairgap "-3"
+cl_crosshairgap "-1"
 cl_crosshairstyle "4"
-cl_crosshairgap_useweaponvalue 1 //Change gap on different weapons
+cl_crosshairgap_useweaponvalue 0 //Change gap on different weapons
 
 //Viewmodel
-viewmodel_fov "62"
-viewmodel_offset_x "2.5"
+viewmodel_fov "68"
+viewmodel_offset_x "1.5"
 viewmodel_offset_y "-2"
 viewmodel_offset_z "-2"
 
 //MISC
 cl_autowepswitch 0
 m_rawinput "1"
-fps_max "289"
+fps_max "300"
+fps_max_menu "300"
 r_drawtracers_firstperson "0"
 r_eyegloss "0"
 cl_showloadout 0
 
 //Sound Settings
 voice_mixer_volume "1.00"
-volume "0.45"
-snd_mixahead "0.025"
+volume "0.5"
+snd_mixahead "0.05"
 snd_musicvolume "0.0"
 
-
 //HUD
-cl_hud_color 1
-cl_hud_background_alpha 1
+cl_hud_color 7
+cl_hud_background_alpha 0
 cl_hud_playercount_pos 1
 cl_hud_playercount_showcount 1
-cl_hud_radar_scale 0.69
+cl_hud_radar_scale 1.2
+cl_radar_scale 0.55
+cl_radar_icon_scale_min 1
+cl_radar_always_centered 1
+hud_scaling 0.85
 
 //Rates
 cl_interp "0"
@@ -66,13 +69,14 @@ bind mwheelup slot10
 bind a "+moveleft;r_cleardecals"
 bind d "+moveright;r_cleardecals"
 
+//bind x command radio
+bind x radio1
 
 //Net Graph
-
 net_graphheight 930
 net_graphproportionalfont 0
-net_graphpos 2
-net_graph 0
+net_graphpos 1
+net_graph 1
 
 //Headbob
 cl_viewmodel_shift_left_amt "0"
@@ -81,15 +85,13 @@ cl_bob_lower_amt "0"
 cl_bobamt_lat "0"
 cl_bobamt_vert "0"
 cl_bobcycle "0"
+viewmodel_recoil "0"
+cl_wpn_sway_scale "0"
 
 //Preload Map
 cl_forcepreload "1"
 
-//Radar Scale
-cl_radar_scale 0.4
-
 //Printing Message
-
 echo " "
 echo " @@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@ "
 echo " @@@ Autoexec.cfg loaded successfully @@@ "
