--- a/autoexec.cfg
+++ b/autoexec.cfg
@@ -1,11 +1,9 @@
-//RMK AUTOEXEC
-
 //Sensitivity
-sensitivity "1.44"
+sensitivity "1.7"
 
 //CROSSHAIR
 cl_crosshair_drawoutline "0"
-cl_crosshairalpha "250"
+cl_crosshairalpha "255"
 cl_crosshaircolor "2"
 cl_crosshaircolor_b "0" //unset
 cl_crosshaircolor_r "0" //unset
@@ -14,13 +12,13 @@ cl_crosshairdot "0"
 cl_crosshairsize "2"
 cl_crosshairthickness "0"
 cl_crosshairusealpha "1"
-cl_crosshairgap "-1"
+cl_crosshairgap "-3"
 cl_crosshairstyle "4"
 cl_crosshairgap_useweaponvalue 0 //Change gap on different weapons
 
 //Viewmodel
 viewmodel_fov "68"
-viewmodel_offset_x "1.5"
+viewmodel_offset_x "2.5"
 viewmodel_offset_y "-2"
 viewmodel_offset_z "-2"
 
@@ -32,11 +30,20 @@ fps_max_menu "300"
 r_drawtracers_firstperson "0"
 r_eyegloss "0"
 cl_showloadout 0
+cl_autohelp "0"
+cl_disablehtmlmotd "0"
+cl_downloadfilter "nosounds"
+cl_showhelp "0"
+r_dynamic "0"
+joystick "0"
 
 //Sound Settings
 voice_mixer_volume "1.00"
 volume "0.5"
-snd_mixahead "0.05"
+snd_menumusic_volume "0"
+snd_mix_async "1"
+snd_mixahead "0.025"
+snd_stream "1"
 snd_musicvolume "0.0"
 
 //HUD
@@ -51,11 +58,15 @@ cl_radar_always_centered 1
 hud_scaling 0.85
 
 //Rates
+cl_lagcompensation "1"
+cl_predict "1"
+cl_predictweapons "1"
 cl_interp "0"
 cl_interp_ratio "1"
-cl_cmdrate "128"
-cl_updaterate "128"
-rate "128000"
+cl_cmdrate "128
+cl_updaterate "128
+rate "786432"
+
 
 //BINDS
 
@@ -93,7 +104,11 @@ cl_forcepreload "1"
 
 //Printing Message
 echo " "
+echo " "
+echo " "
 echo " @@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@ "
 echo " @@@ Autoexec.cfg loaded successfully @@@ "
 echo " @@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@ "
+echo " "
+echo " "
 echo " "
