--- a/autoexec.cfg
+++ b/autoexec.cfg
@@ -1,26 +1,30 @@
 //Sensitivity
-sensitivity "1.7"
+sensitivity "1"
+zoom_sensitivity_ratio_mouse "0.81"
 
-//CROSSHAIR
+//ClanID
+cl_clanid "32576475" 
+
+//Crosshair
 cl_crosshair_drawoutline "0"
 cl_crosshairalpha "255"
-cl_crosshaircolor "2"
+cl_crosshaircolor "4"
 cl_crosshaircolor_b "0" //unset
 cl_crosshaircolor_r "0" //unset
 cl_crosshaircolor_g "0" //unset
 cl_crosshairdot "0" 
 cl_crosshairsize "2"
-cl_crosshairthickness "0"
+cl_crosshairthickness "1"
 cl_crosshairusealpha "1"
-cl_crosshairgap "-3"
+cl_crosshairgap "0"
 cl_crosshairstyle "4"
 cl_crosshairgap_useweaponvalue 0 //Change gap on different weapons
 
 //Viewmodel
 viewmodel_fov "68"
-viewmodel_offset_x "2.5"
-viewmodel_offset_y "-2"
-viewmodel_offset_z "-2"
+viewmodel_offset_x 2.5
+viewmodel_offset_y -2
+viewmodel_offset_z -2
 
 //MISC
 cl_autowepswitch 0
@@ -36,6 +40,7 @@ cl_downloadfilter "nosounds"
 cl_showhelp "0"
 r_dynamic "0"
 joystick "0"
+cl_forcepreload "1"
 
 //Sound Settings
 voice_mixer_volume "1.00"
@@ -47,11 +52,11 @@ snd_stream "1"
 snd_musicvolume "0.0"
 
 //HUD
-cl_hud_color 7
+cl_hud_color 5
 cl_hud_background_alpha 0
 cl_hud_playercount_pos 1
 cl_hud_playercount_showcount 1
-cl_hud_radar_scale 1.2
+cl_hud_radar_scale 1.3
 cl_radar_scale 0.55
 cl_radar_icon_scale_min 1
 cl_radar_always_centered 1
@@ -69,18 +74,10 @@ rate "786432"
 
 
 //BINDS
-
-//Mousewheel Down Jump
 bind mwheeldown +jump
-
-//Mousewheel Up Inspect Weapon
 bind mwheelup slot10
-
-//Bind A and D to remove decals (blood etc). Can take performance if bad pc.
-bind a "+moveleft;r_cleardecals"
-bind d "+moveright;r_cleardecals"
-
-//bind x command radio
+bind a "+moveleft;r_cleardecals;+cl_show_team_equipment"
+bind d "+moveright;r_cleardecals;+cl_show_team_equipment"
 bind x radio1
 
 //Net Graph
@@ -99,15 +96,13 @@ cl_bobcycle "0"
 viewmodel_recoil "0"
 cl_wpn_sway_scale "0"
 
-//Preload Map
-cl_forcepreload "1"
 
 //Printing Message
 echo " "
 echo " "
 echo " "
 echo " @@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@ "
-echo " @@@ Autoexec.cfg loaded successfully @@@ "
+echo " @@@@@@@@@ autoexec.cfg loaded @@@@@@@@@@ "
 echo " @@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@ "
 echo " "
 echo " "
