--- a/autoexec.cfg
+++ b/autoexec.cfg
@@ -1,109 +1,109 @@
-//Sensitivity
-sensitivity "1"
-zoom_sensitivity_ratio_mouse "0.81"
+//autoexec.cfg
 
-//ClanID
-cl_clanid "32576475" 
+//sensitivity
+sensitivity "1.7"
+zoom_sensitivity_ratio_mouse "1"
 
-//Crosshair
-cl_crosshair_drawoutline "0"
-cl_crosshairalpha "255"
-cl_crosshaircolor "4"
-cl_crosshaircolor_b "0" //unset
-cl_crosshaircolor_r "0" //unset
-cl_crosshaircolor_g "0" //unset
-cl_crosshairdot "0" 
-cl_crosshairsize "2"
-cl_crosshairthickness "1"
-cl_crosshairusealpha "1"
-cl_crosshairgap "0"
-cl_crosshairstyle "4"
-cl_crosshairgap_useweaponvalue 0 //Change gap on different weapons
+//clanid
+cl_clanid "36111089" // none = "0"
 
-//Viewmodel
-viewmodel_fov "68"
-viewmodel_offset_x 2.5
-viewmodel_offset_y -2
-viewmodel_offset_z -2
+//crosshair
+cl_crosshairalpha 250; cl_crosshaircolor 4; cl_crosshaircolor_b 165; cl_crosshaircolor_g 255; cl_crosshaircolor_r 0; cl_crosshairdot 1; cl_crosshairgap -3; cl_crosshairsize 1; cl_crosshairstyle 4; cl_crosshairthickness 0; cl_crosshairusealpha 1;
 
-//MISC
+
+//viewmodel
+viewmodel_fov 65; viewmodel_offset_x 2; viewmodel_offset_y 1.5; viewmodel_offset_z -2; viewmodel_presetpos 1; cl_viewmodel_shift_left_amt 1.5; cl_viewmodel_shift_right_amt 0.75; viewmodel_recoil 1; cl_righthand 1;
+
+//headbob
+cl_bob_lower_amt 0
+cl_bobamt_lat 0.0
+cl_bobamt_vert 0.0
+cl_bobcycle 0.0
+cl_viewmodel_shift_right_amt 0
+cl_viewmodel_shift_left_amt 0
+
+//misc
 cl_autowepswitch 0
 m_rawinput "1"
-fps_max "300"
+fps_max "0"
 fps_max_menu "300"
 r_drawtracers_firstperson "0"
 r_eyegloss "0"
 cl_showloadout 0
 cl_autohelp "0"
 cl_disablehtmlmotd "0"
-cl_downloadfilter "nosounds"
 cl_showhelp "0"
 r_dynamic "0"
 joystick "0"
 cl_forcepreload "1"
+cl_join_advertise 2
+sv_holiday_mode 0
+cl_mute_enemy_team 0
+engine_no_focus_sleep 0 
 
-//Sound Settings
-voice_mixer_volume "1.00"
-volume "0.5"
-snd_menumusic_volume "0"
-snd_mix_async "1"
+//sound
+voice_mixer_volume "0.50"
+volume "0.35"
+dsp_enhance_stereo "0"
 snd_mixahead "0.025"
-snd_stream "1"
-snd_musicvolume "0.0"
+snd_pitchquality "1"
+snd_deathcamera_volume "0.0"
+snd_mapobjective_volume "0.0"
+snd_menumusic_volume "0.0"
+snd_mvp_volume "0.0"
+snd_roundend_volume "0."
+snd_roundstart_volume "0.0"
+snd_tensecondwarning_volume "0.0"
+voice_scale "0.12"
+snd_mute_losefocus "0"
 
-//HUD
-cl_hud_color 5
-cl_hud_background_alpha 0
+//hud
+cl_hud_color 1
+cl_hud_background_alpha 1
 cl_hud_playercount_pos 1
 cl_hud_playercount_showcount 1
 cl_hud_radar_scale 1.3
 cl_radar_scale 0.55
 cl_radar_icon_scale_min 1
 cl_radar_always_centered 1
-hud_scaling 0.85
+hud_scaling 0.95
 
-//Rates
+//rates
 cl_lagcompensation "1"
 cl_predict "1"
 cl_predictweapons "1"
 cl_interp "0"
 cl_interp_ratio "1"
-cl_cmdrate "128
-cl_updaterate "128
+cl_cmdrate "128"
+cl_updaterate "128"
 rate "786432"
+//
+net_graphheight 1050
+net_graphproportionalfont 0
+net_graphpos 1
+net_graph 1
 
-
-//BINDS
+//binds
 bind mwheeldown +jump
 bind mwheelup slot10
 bind a "+moveleft;r_cleardecals;+cl_show_team_equipment"
 bind d "+moveright;r_cleardecals;+cl_show_team_equipment"
 bind x radio1
+bind mouse4 +lookatweapon
+bind "t" "use weapon_knife; use weapon_flashbang;"
+bind "z" "use weapon_knife; use weapon_smokegrenade;"
+bind "f" "use weapon_knife; use weapon_hegrenade;"
+//
+alias "+jumpthrow" "+jump;-attack"
+alias "-jumpthrow" "-jump"
+bind "v" "+jumpthrow"
 
-//Net Graph
-net_graphheight 930
-net_graphproportionalfont 0
-net_graphpos 1
-net_graph 1
 
-//Headbob
-cl_viewmodel_shift_left_amt "0"
-cl_viewmodel_shift_right_amt "0"
-cl_bob_lower_amt "0"
-cl_bobamt_lat "0"
-cl_bobamt_vert "0"
-cl_bobcycle "0"
-viewmodel_recoil "0"
-cl_wpn_sway_scale "0"
+
 
 
 //Printing Message
-echo " "
-echo " "
-echo " "
-echo " @@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@ "
-echo " @@@@@@@@@ autoexec.cfg loaded @@@@@@@@@@ "
-echo " @@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@ "
-echo " "
-echo " "
+clear;
+echo "> autoexec executed"
+echo ">> settings loaded"
 echo " "
