--- a/autoexec.cfg
+++ b/autoexec.cfg
@@ -8,11 +8,29 @@ zoom_sensitivity_ratio_mouse "1"
 cl_clanid "36111089" // none = "0"
 
 //crosshair
-cl_crosshairalpha 250; cl_crosshaircolor 4; cl_crosshaircolor_b 165; cl_crosshaircolor_g 255; cl_crosshaircolor_r 0; cl_crosshairdot 1; cl_crosshairgap -3; cl_crosshairsize 1; cl_crosshairstyle 4; cl_crosshairthickness 0; cl_crosshairusealpha 1;
+cl_crosshairalpha 250
+cl_crosshaircolor 4
+cl_crosshaircolor_b 165
+cl_crosshaircolor_g 255
+cl_crosshaircolor_r 0
+cl_crosshairdot 1
+cl_crosshairgap -3
+cl_crosshairsize 1
+cl_crosshairstyle 4
+cl_crosshairthickness 0
+cl_crosshairusealpha 1
 
 
 //viewmodel
-viewmodel_fov 65; viewmodel_offset_x 2; viewmodel_offset_y 1.5; viewmodel_offset_z -2; viewmodel_presetpos 1; cl_viewmodel_shift_left_amt 1.5; cl_viewmodel_shift_right_amt 0.75; viewmodel_recoil 1; cl_righthand 1;
+viewmodel_fov 65
+viewmodel_presetpos 1
+viewmodel_offset_x 2
+viewmodel_offset_y 1.5
+viewmodel_offset_z -2
+cl_viewmodel_shift_left_amt 1.5
+cl_viewmodel_shift_right_amt 0.75
+viewmodel_recoil 1
+cl_righthand 1
 
 //headbob
 cl_bob_lower_amt 0
