--- a/config.cfg
+++ b/config.cfg
@@ -6,24 +6,24 @@ bind "3" "slot3"
 bind "4" "slot4"
 bind "5" "slot5"
 bind "9" "slot9"
-bind "a" "+moveleft;r_cleardecals"
+bind "a" "+moveleft;r_cleardecals;+cl_show_team_equipment"
 bind "b" "buymenu"
-bind "c" "radio3"
-bind "d" "+moveright;r_cleardecals"
+bind "d" "+moveright;r_cleardecals;+cl_show_team_equipment"
 bind "e" "+use"
-bind "f" "slot6"
+bind "f" "use weapon_knife; use weapon_hegrenade;"
 bind "g" "drop"
+bind "h" "slot12"
 bind "m" "teammenu"
 bind "q" "lastinv"
 bind "r" "+reload"
 bind "s" "+back"
-bind "t" "slot7"
+bind "t" "use weapon_knife; use weapon_flashbang;"
 bind "u" "messagemode2"
-bind "v" "+spray_menu"
+bind "v" "+jumpthrow"
 bind "w" "+forward"
-bind "x" "radio2"
+bind "x" "radio1"
 bind "y" "messagemode"
-bind "z" "slot8"
+bind "z" "use weapon_knife; use weapon_smokegrenade;"
 bind "," "buyammo1"
 bind "." "buyammo2"
 bind "SPACE" "+jump"
@@ -35,6 +35,7 @@ bind "PAUSE" "pause"
 bind "SHIFT" "+duck"
 bind "F1" "autobuy"
 bind "F2" "rebuy"
+bind "F3" "askconnect_accept"
 bind "F5" "jpeg"
 bind "F6" "save quick"
 bind "F7" "load quick"
@@ -42,23 +43,26 @@ bind "F8" "toggleconsole"
 bind "F10" "quit prompt"
 bind "MOUSE1" "+attack"
 bind "MOUSE2" "+attack2"
+bind "MOUSE3" "player_ping"
+bind "MOUSE4" "+lookatweapon"
 bind "MOUSE5" "+voicerecord"
 bind "MWHEELUP" "slot10"
 bind "MWHEELDOWN" "+jump"
-bind "A_BUTTON" "+jump"
-bind "B_BUTTON" "+reload"
-bind "X_BUTTON" "+use"
-bind "Y_BUTTON" "invnextnongrenade"
-bind "L_SHOULDER" "invnextitem"
-bind "R_SHOULDER" "+lookspin"
-bind "BACK" "togglescores"
-bind "START" "gameui_activate"
-bind "STICK2" "+attack2"
-bind "DOWN" "drop"
-bind "S1_UP" "xmove"
-bind "L_TRIGGER" "+duck"
-bind "R_TRIGGER" "+attack"
-bind "S2_UP" "xlook"
+bind "JOY1" "+jump"
+bind "JOY2" "+reload"
+bind "JOY3" "+use"
+bind "JOY4" "invnextnongrenade"
+bind "JOY5" "invnextitem"
+bind "JOY6" "+lookspin"
+bind "JOY7" "togglescores"
+bind "JOY8" "gameui_activate"
+bind "JOY10" "+attack2"
+bind "POV_DOWN" "drop"
+bind "Y AXIS NEG" "xmove"
+bind "Z AXIS POS" "+duck"
+bind "Z AXIS NEG" "+attack"
+bind "U AXIS NEG" "xlook"
+@panorama_debug_overlay_opacity "0.8"
 adsp_debug "0"
 ai_report_task_timings_on_limit "0"
 ai_think_limit_label "0"
@@ -92,8 +96,8 @@ c_thirdpersonshoulderaimdist "120.0"
 c_thirdpersonshoulderdist "40.0"
 c_thirdpersonshoulderheight "5.0"
 c_thirdpersonshoulderoffset "20.0"
-cachedvalue_count_partybrowser "1514211601"
-cachedvalue_count_teammates "1514211602"
+cachedvalue_count_partybrowser "1576885006"
+cachedvalue_count_teammates "1576885249"
 cam_collision "1"
 cam_idealdelta "4.0"
 cam_idealdist "150"
@@ -110,7 +114,7 @@ cc_subtitles "0"
 chet_debug_idle "0"
 cl_allowdownload "1"
 cl_allowupload "1"
-cl_autohelp "1"
+cl_autohelp "0"
 cl_autowepswitch "0"
 cl_bob_lower_amt "5.000000"
 cl_bobamt_lat "0.100000"
@@ -118,31 +122,32 @@ cl_bobamt_vert "0.100000"
 cl_bobcycle "0.980000"
 cl_chatfilter_version "1"
 cl_chatfilters "63"
-cl_clanid "28824873"
-cl_clock_24hour "1"
+cl_clanid "36111089"
 cl_cmdrate "128"
 cl_color "0"
+cl_compass_enabled "1"
 cl_crosshair_drawoutline "0"
 cl_crosshair_dynamic_maxdist_splitratio "0.35"
 cl_crosshair_dynamic_splitalpha_innermod "1"
 cl_crosshair_dynamic_splitalpha_outermod "0.5"
 cl_crosshair_dynamic_splitdist "7"
+cl_crosshair_friendly_warning "1"
 cl_crosshair_outlinethickness "1"
 cl_crosshair_sniper_show_normal_inaccuracy "0"
 cl_crosshair_sniper_width "1"
 cl_crosshair_t "0"
-cl_crosshairalpha "250"
-cl_crosshaircolor "5"
-cl_crosshaircolor_b "100"
-cl_crosshaircolor_g "150"
-cl_crosshaircolor_r "0"
+cl_crosshairalpha "255"
+cl_crosshaircolor "1"
+cl_crosshaircolor_b "250"
+cl_crosshaircolor_g "250"
+cl_crosshaircolor_r "250"
 cl_crosshairdot "0"
 cl_crosshairgap "0"
 cl_crosshairgap_useweaponvalue "0"
 cl_crosshairscale "0"
 cl_crosshairsize "3"
 cl_crosshairstyle "4"
-cl_crosshairthickness "0.5"
+cl_crosshairthickness "1"
 cl_crosshairusealpha "1"
 cl_debugrumble "0"
 cl_detail_avoid_force "0.4"
@@ -153,55 +158,67 @@ cl_disablefreezecam "0"
 cl_disablehtmlmotd "0"
 cl_dm_buyrandomweapons "1"
 cl_downloadfilter "all"
+cl_dz_playagain_auto_spectate "0"
 cl_embedded_stream_audio_volume "60"
 cl_embedded_stream_audio_volume_xmaster "1"
 cl_fixedcrosshairgap "3"
 cl_forcepreload "1"
 cl_freezecampanel_position_dynamic "1"
+cl_grass_mip_bias "-0.5"
+cl_hide_avatar_images ""
 cl_hud_background_alpha "1"
 cl_hud_bomb_under_radar "1"
 cl_hud_color "1"
 cl_hud_healthammo_style "0"
 cl_hud_playercount_pos "1"
 cl_hud_playercount_showcount "1"
-cl_hud_radar_scale "0.800000"
+cl_hud_radar_scale "1.3"
 cl_idealpitchscale "0.8"
-cl_inv_showdividerline "2"
 cl_inventory_saved_filter2 "all"
 cl_inventory_saved_sort2 "inv_sort_age"
-cl_join_advertise "1"
-cl_loadout_colorweaponnames "0"
+cl_invites_only_friends "0"
+cl_invites_only_mainmenu "0"
+cl_itemimages_dynamically_generated "2"
+cl_join_advertise "2"
 cl_minimal_rtt_shadows "1"
 cl_mouselook "1"
 cl_mute_all_but_friends_and_party "0"
 cl_mute_enemy_team "0"
 cl_obs_interp_enable "1"
 cl_observercrosshair "1"
-cl_operation_premium_reminder_op08 "0"
+cl_player_ping_mute "0"
 cl_playerspray_auto_apply "1"
+cl_promoted_settings_acknowledged "1:1576885255331"
+cl_quickinventory_lastinv "1"
+cl_quickinventory_line_update_speed "65.0f"
 cl_radar_always_centered "1"
-cl_radar_icon_scale_min "0.6"
+cl_radar_icon_scale_min "1"
 cl_radar_rotate "1"
-cl_radar_scale "0.4"
+cl_radar_scale "0.55"
 cl_radar_square_with_scoreboard "1"
+cl_radial_radio_tab "0"
+cl_radialmenu_deadzone_size "0.04"
 cl_righthand "1"
 cl_rumblescale "1.0"
+cl_sanitize_player_names "0"
 cl_scalecrosshair "1"
 cl_scoreboard_mouse_enable_binding "+attack2"
+cl_scoreboard_survivors_always_on "0"
 cl_show_clan_in_death_notice "1"
-cl_showhelp "1"
+cl_showhelp "0"
 cl_showloadout "0"
-cl_showpluginmessages "1"
+cl_showpluginmessages2 "0"
+cl_sniper_delay_unscope "0"
 cl_spec_follow_grenade_key "0"
 cl_spec_mode "4"
-cl_teamid_overhead_always "0"
-cl_teamid_overhead_name_alpha "100"
-cl_teamid_overhead_name_fadetime "1.0"
+cl_tablet_mapmode "1"
+cl_teamid_overhead_mode "2"
 cl_teammate_colors_show "1"
 cl_thirdperson "0"
 cl_timeout "30"
-cl_updaterate "64.000000"
+cl_updaterate "128"
 cl_use_opens_buy_menu "1"
+cl_versus_intro "1"
 cl_viewmodel_shift_left_amt "0.500000"
 cl_viewmodel_shift_right_amt "0.250000"
 closecaption "0"
@@ -209,15 +226,13 @@ closeonbuy "0"
 commentary_firstrun "0"
 con_enable "1"
 crosshair "1"
-cursortimeout "60.0"
 dsp_enhance_stereo "0"
-econ_highest_baseitem_seen "64"
-engine_no_focus_sleep "50"
+engine_no_focus_sleep "0"
 force_audio_english "0"
 func_break_max_pieces "15"
 g15_update_msec "250"
 gameinstructor_enable "0"
-hud_scaling "0.707000"
+hud_scaling "0.95"
 hud_showtargetid "1"
 hud_takesshots "0"
 joy_accelmax "1.0"
@@ -270,9 +285,8 @@ joy_yawthreshold "0.15"
 joystick "0"
 joystick_force_disabled "1"
 joystick_force_disabled_set_from_options "1"
-key_bind_version "2"
-lobby_default_privacy_bits1 "6"
-lobby_voice_chat_enabled "0"
+key_bind_version "5"
+lobby_default_privacy_bits2 "1"
 lockMoveControllerRet "0"
 lookspring "0"
 lookstrafe "0"
@@ -303,13 +317,14 @@ mm_csgo_community_search_players_min "3"
 mm_dedicated_search_maxping "40"
 mm_server_search_lan_ports "27015,27016,27017,27018,27019,27020"
 muzzleflash_light "1"
-name "RMK"
+name "Dende"
 net_allow_multicast "1"
-net_graph "0"
+net_graph "1"
 net_graphheight "930"
 net_graphholdsvframerate "0"
+net_graphipc "0"
 net_graphmsecs "400"
-net_graphpos "2"
+net_graphpos "1"
 net_graphproportionalfont "0"
 net_graphshowinterp "1"
 net_graphshowlatency "1"
@@ -325,23 +340,12 @@ option_speed_method "0"
 password ""
 play_distance "1"
 player_botdifflast_s "2"
-player_competitive_maplist_2v2_7_0_4C128440 "mg_de_train,mg_de_lake,mg_de_inferno,mg_de_shortdust,mg_gd_rialto,mg_de_overpass,mg_de_cbble"
-player_competitive_maplist_8_7_0_77AED00 "mg_de_dust2,mg_de_train,mg_de_inferno,mg_de_nuke,mg_de_mirage,mg_cs_office,mg_de_cache,mg_cs_agency,mg_de_overpass,mg_de_cbble,mg_de_canals"
-player_gamemodelast_m "0"
-player_gamemodelast_s "0"
-player_gametypelast_m "0"
-player_gametypelast_s "3.000000"
-player_last_leaderboards_filter "0"
-player_last_leaderboards_mode "0"
-player_last_leaderboards_panel "0"
-player_last_medalstats_category "0"
-player_last_medalstats_panel "0"
-player_maplast_m "0"
-player_maplast_s "0"
-player_medalstats_most_recent_time "0"
+player_competitive_maplist_2v2_8_1_E8907D2E "mg_de_train,mg_de_lake,mg_de_inferno,mg_de_shortnuke,mg_de_vertigo,mg_gd_rialto,mg_de_shortdust,mg_de_overpass,mg_de_cbble"
+player_competitive_maplist_8_8_1_475B5511 "mg_de_dust2,mg_de_train,mg_de_inferno,mg_de_nuke,mg_de_vertigo,mg_de_mirage,mg_cs_office,mg_de_cache,mg_cs_agency,mg_de_overpass"
 player_nevershow_communityservermessage "1"
+player_survival_list_8_1_7 "mg_dz_blacksite,mg_dz_sirocco,mg_dz_junglety"
 player_teamplayedlast "2"
-player_wargames_list_7_0_604 "all"
+player_wargames_list2_8_1_604 "mg_skirmish_flyingscoutsman,mg_skirmish_armsrace,mg_skirmish_demolition"
 r_drawmodelstatsoverlaymax "1.5"
 r_drawmodelstatsoverlaymin "0.1"
 r_drawtracers_firstperson "0"
@@ -351,7 +355,7 @@ r_eyeshift_x "0"
 r_eyeshift_y "0"
 r_eyeshift_z "0"
 r_eyesize "0"
-rate "128000"
+rate "786432"
 safezonex "1.0"
 safezoney "1.0"
 sc_enable "1.0"
@@ -362,32 +366,35 @@ scene_showfaceto "0"
 scene_showlook "0"
 scene_showmoveto "0"
 scene_showunlock "0"
-sensitivity "2"
-sf_ui_tint "2"
+sensitivity "1"
 sk_autoaim_mode "1"
 skill "1.000000"
-snd_deathcamera_volume "1.0"
+snd_deathcamera_volume "0.0"
 snd_duckerattacktime "0.5"
 snd_duckerreleasetime "2.5"
 snd_duckerthreshold "0.15"
 snd_ducking_off "1"
 snd_ducktovolume "0.55"
+snd_dzmusic_volume "0.2"
 snd_hrtf_distance_behind "100"
+snd_hrtf_voice_delay "0.1"
 snd_hwcompat "0"
-snd_mapobjective_volume "1.0"
-snd_menumusic_volume "1.0"
+snd_mapobjective_volume "0.0"
+snd_menumusic_volume "0.0"
 snd_mix_async "1"
 snd_mix_async_onetime_reset "1"
 snd_mixahead "0.025"
-snd_music_selection "2"
-snd_musicvolume "0.0"
+snd_music_selection "1"
+snd_music_volume_onetime_reset_2 "1"
 snd_musicvolume_multiplier_inoverlay "0.1"
-snd_mute_losefocus "1"
+snd_mute_losefocus "0"
+snd_mute_mvp_music_live_players "0"
+snd_mvp_volume "0.0"
 snd_pitchquality "1"
-snd_roundend_volume "1.0"
-snd_roundstart_volume "1.0"
-snd_tensecondwarning_volume "1.0"
-snd_use_hrtf_onetime_reset "0"
+snd_roundend_volume "0."
+snd_roundstart_volume "0.0"
+snd_surround_speakers "-1"
+snd_tensecondwarning_volume "0.0"
 sound_device_override ""
 spec_replay_autostart "1"
 spec_show_xray "0"
@@ -405,15 +412,13 @@ sv_logsdir "logs"
 sv_noclipaccelerate "5"
 sv_noclipspeed "5"
 sv_pvsskipanimation "1"
-sv_skyname "sky_cs15_daylight01_hdr"
+sv_skyname "cs_tibet"
 sv_specaccelerate "5"
 sv_specnoclip "1"
 sv_specspeed "3"
 sv_unlockedchapters "1"
 sv_voiceenable "1"
-sys_antialiasing "0"
-sys_aspectratio "0"
-sys_refldetail "0"
+test_convar "0"
 texture_budget_background_alpha "128"
 texture_budget_panel_bottom_of_history_fraction ".25"
 texture_budget_panel_height "284"
@@ -422,39 +427,61 @@ texture_budget_panel_x "0"
 texture_budget_panel_y "450"
 tr_best_course_time "0"
 tr_completed_training "0"
+triple_monitor_mode "0"
 tv_nochat "0"
+ui_inventorysettings_recently_acknowledged ""
+ui_nearbylobbies_filter2 "competitive"
+ui_news_last_read_link "https://blog.counter-strike.net/de/index.php/2019/12/27585/"
+ui_playsettings_maps_listen_casual "random_classic"
+ui_playsettings_maps_listen_competitive "random_classic"
+ui_playsettings_maps_listen_deathmatch "random_classic"
+ui_playsettings_maps_listen_scrimcomp2v2 "mg_de_inferno"
+ui_playsettings_maps_listen_skirmish "mg_skirmish_flyingscoutsman"
+ui_playsettings_maps_official_casual "mg_casualsigma"
+ui_playsettings_maps_official_deathmatch "mg_casualsigma"
+ui_playsettings_maps_workshop "@workshop/243702660/aim_botz"
+ui_playsettings_mode_listen "casual"
+ui_playsettings_mode_official_v20 "casual"
+ui_playsettings_survival_solo "0"
+ui_playsettings_warmup_map_name "de_mirage"
+ui_popup_weaponupdate_version "0"
+ui_setting_advertiseforhire_auto "1"
+ui_setting_advertiseforhire_auto_last "/competitive"
 ui_steam_overlay_notification_position "topleft"
+ui_vanitysetting_loadoutslot_ct "rifle2"
+ui_vanitysetting_loadoutslot_t "melee"
+ui_vanitysetting_team "t"
 vgui_message_dialog_modal "1"
-viewmodel_fov "55"
+viewmodel_fov "54"
 viewmodel_offset_x "2.5"
-viewmodel_offset_y "-2"
+viewmodel_offset_y "2"
 viewmodel_offset_z "-2"
 viewmodel_presetpos "1"
+viewmodel_recoil "0"
 voice_caster_enable "0"
 voice_caster_scale "1"
 voice_enable "1"
 voice_forcemicrecord "1"
 voice_mixer_boost "0"
 voice_mixer_mute "0"
-voice_mixer_volume "1.00"
+voice_mixer_volume "0.50"
 voice_modenable "1"
-voice_scale "0.250000"
+voice_positional "0"
+voice_scale "0.15"
 voice_system_enable "1"
 voice_threshold "4000"
-volume "0.45"
+volume "0.5"
 vprof_graphheight "256"
 vprof_graphwidth "512"
 vprof_unaccounted_limit "0.3"
 vprof_verbose "1"
 vprof_warningmsec "10"
 weapon_accuracy_logging "0"
-windows_speaker_config "0"
 xbox_autothrottle "1"
 xbox_throttlebias "100"
 xbox_throttlespoof "200"
 zoom_sensitivity_ratio_joystick "1.0"
-zoom_sensitivity_ratio_mouse "1.0"
+zoom_sensitivity_ratio_mouse "1"
 cmd1 +jlook
 
-exec autoexec.cfg
 exec autoexec
