--- a/autoexec.cfg
+++ b/autoexec.cfg
@@ -5,27 +5,24 @@ sensitivity "1.7"
 zoom_sensitivity_ratio_mouse "1"
 
 //clanid
-cl_clanid "36111089" // none = "0"
+cl_clanid "36376513" // none = "0"
 
 //crosshair
-cl_crosshairalpha 250
+cl_crosshairalpha 255
 cl_crosshaircolor 4
-cl_crosshaircolor_b 165
-cl_crosshaircolor_g 255
-cl_crosshaircolor_r 0
-cl_crosshairdot 1
-cl_crosshairgap -3
-cl_crosshairsize 1
-cl_crosshairstyle 4
-cl_crosshairthickness 0
+cl_crosshairdot 0
+cl_crosshairgap -2
+cl_crosshairsize 1.5
+cl_crosshairstyle 5
 cl_crosshairusealpha 1
-
+cl_crosshairthickness 0
+cl_crosshair_drawoutline 0; cl_crosshair_sniper_width 1; cl_crosshaircolor_b 144; cl_crosshaircolor_g 195; cl_crosshaircolor_r 27;
 
 //viewmodel
-viewmodel_fov 65
+viewmodel_fov 68
 viewmodel_presetpos 1
 viewmodel_offset_x 2
-viewmodel_offset_y 1.5
+viewmodel_offset_y 2
 viewmodel_offset_z -2
 cl_viewmodel_shift_left_amt 1.5
 cl_viewmodel_shift_right_amt 0.75
@@ -40,6 +37,7 @@ cl_bobcycle 0.0
 cl_viewmodel_shift_right_amt 0
 cl_viewmodel_shift_left_amt 0
 
+
 //misc
 cl_autowepswitch 0
 m_rawinput "1"
@@ -53,11 +51,15 @@ cl_disablehtmlmotd "0"
 cl_showhelp "0"
 r_dynamic "0"
 joystick "0"
-cl_forcepreload "1"
+cl_forcepreload "0"
 cl_join_advertise 2
 sv_holiday_mode 0
 cl_mute_enemy_team 0
 engine_no_focus_sleep 0 
+
+//buymenu
+cl_buywheel_nomousecentering 1
+cl_buywheel_nonumberpurchasing 1
 
 //sound
 voice_mixer_volume "0.50"
@@ -80,11 +82,14 @@ cl_hud_color 1
 cl_hud_background_alpha 1
 cl_hud_playercount_pos 1
 cl_hud_playercount_showcount 1
-cl_hud_radar_scale 1.3
-cl_radar_scale 0.55
-cl_radar_icon_scale_min 1
-cl_radar_always_centered 1
 hud_scaling 0.95
+cl_hud_healthammo_style 1
+
+//radar
+cl_hud_radar_scale 1.1	//Radar Scale
+cl_radar_scale 0.45 //Radar zoom
+cl_radar_icon_scale_min 1.25
+cl_radar_always_centered 1
 
 //rates
 cl_lagcompensation "1"
@@ -96,10 +101,10 @@ cl_cmdrate "128"
 cl_updaterate "128"
 rate "786432"
 //
-net_graphheight 1050
+net_graphheight 0
 net_graphproportionalfont 0
 net_graphpos 1
-net_graph 1
+net_graph 0
 
 //binds
 bind mwheeldown +jump
