--- a/config.cfg
+++ b/config.cfg
@@ -96,8 +96,8 @@ c_thirdpersonshoulderaimdist "120.0"
 c_thirdpersonshoulderdist "40.0"
 c_thirdpersonshoulderheight "5.0"
 c_thirdpersonshoulderoffset "20.0"
-cachedvalue_count_partybrowser "1576885006"
-cachedvalue_count_teammates "1576885249"
+cachedvalue_count_partybrowser "1582673936"
+cachedvalue_count_teammates "1582674432"
 cam_collision "1"
 cam_idealdelta "4.0"
 cam_idealdist "150"
@@ -122,32 +122,31 @@ cl_bobamt_vert "0.100000"
 cl_bobcycle "0.980000"
 cl_chatfilter_version "1"
 cl_chatfilters "63"
-cl_clanid "36111089"
+cl_clanid "2151"
 cl_cmdrate "128"
 cl_color "0"
 cl_compass_enabled "1"
 cl_crosshair_drawoutline "0"
-cl_crosshair_dynamic_maxdist_splitratio "0.35"
+cl_crosshair_dynamic_maxdist_splitratio "0.300000"
 cl_crosshair_dynamic_splitalpha_innermod "1"
 cl_crosshair_dynamic_splitalpha_outermod "0.5"
 cl_crosshair_dynamic_splitdist "7"
 cl_crosshair_friendly_warning "1"
-cl_crosshair_outlinethickness "1"
+cl_crosshair_outlinethickness "0.000000"
 cl_crosshair_sniper_show_normal_inaccuracy "0"
 cl_crosshair_sniper_width "1"
 cl_crosshair_t "0"
-cl_crosshairalpha "255"
-cl_crosshaircolor "1"
-cl_crosshaircolor_b "250"
-cl_crosshaircolor_g "250"
-cl_crosshaircolor_r "250"
+cl_crosshairalpha "255.000000"
+cl_crosshaircolor "5"
+cl_crosshaircolor_b "0.000000"
+cl_crosshaircolor_g "255.000000"
+cl_crosshaircolor_r "255.000000"
 cl_crosshairdot "0"
-cl_crosshairgap "0"
+cl_crosshairgap "-2.374332"
 cl_crosshairgap_useweaponvalue "0"
-cl_crosshairscale "0"
-cl_crosshairsize "3"
+cl_crosshairsize "1.212992"
 cl_crosshairstyle "4"
-cl_crosshairthickness "1"
+cl_crosshairthickness "0.819657"
 cl_crosshairusealpha "1"
 cl_debugrumble "0"
 cl_detail_avoid_force "0.4"
@@ -172,7 +171,7 @@ cl_hud_color "1"
 cl_hud_healthammo_style "0"
 cl_hud_playercount_pos "1"
 cl_hud_playercount_showcount "1"
-cl_hud_radar_scale "1.3"
+cl_hud_radar_scale "0.9"
 cl_idealpitchscale "0.8"
 cl_inventory_saved_filter2 "all"
 cl_inventory_saved_sort2 "inv_sort_age"
@@ -201,7 +200,6 @@ cl_radialmenu_deadzone_size "0.04"
 cl_righthand "1"
 cl_rumblescale "1.0"
 cl_sanitize_player_names "0"
-cl_scalecrosshair "1"
 cl_scoreboard_mouse_enable_binding "+attack2"
 cl_scoreboard_survivors_always_on "0"
 cl_show_clan_in_death_notice "1"
@@ -219,8 +217,8 @@ cl_timeout "30"
 cl_updaterate "128"
 cl_use_opens_buy_menu "1"
 cl_versus_intro "1"
-cl_viewmodel_shift_left_amt "0.500000"
-cl_viewmodel_shift_right_amt "0.250000"
+cl_viewmodel_shift_left_amt "1.5"
+cl_viewmodel_shift_right_amt "0.75"
 closecaption "0"
 closeonbuy "0"
 commentary_firstrun "0"
@@ -317,7 +315,7 @@ mm_csgo_community_search_players_min "3"
 mm_dedicated_search_maxping "40"
 mm_server_search_lan_ports "27015,27016,27017,27018,27019,27020"
 muzzleflash_light "1"
-name "Dende"
+name "RMK"
 net_allow_multicast "1"
 net_graph "1"
 net_graphheight "930"
@@ -344,7 +342,7 @@ player_competitive_maplist_2v2_8_1_E8907D2E "mg_de_train,mg_de_lake,mg_de_infern
 player_competitive_maplist_8_8_1_475B5511 "mg_de_dust2,mg_de_train,mg_de_inferno,mg_de_nuke,mg_de_vertigo,mg_de_mirage,mg_cs_office,mg_de_cache,mg_cs_agency,mg_de_overpass"
 player_nevershow_communityservermessage "1"
 player_survival_list_8_1_7 "mg_dz_blacksite,mg_dz_sirocco,mg_dz_junglety"
-player_teamplayedlast "2"
+player_teamplayedlast "3"
 player_wargames_list2_8_1_604 "mg_skirmish_flyingscoutsman,mg_skirmish_armsrace,mg_skirmish_demolition"
 r_drawmodelstatsoverlaymax "1.5"
 r_drawmodelstatsoverlaymin "0.1"
@@ -366,7 +364,7 @@ scene_showfaceto "0"
 scene_showlook "0"
 scene_showmoveto "0"
 scene_showunlock "0"
-sensitivity "1"
+sensitivity "2"
 sk_autoaim_mode "1"
 skill "1.000000"
 snd_deathcamera_volume "0.0"
@@ -399,6 +397,8 @@ sound_device_override ""
 spec_replay_autostart "1"
 spec_show_xray "0"
 spec_usenumberkeys_nobinds "1"
+spec_xray_dropped_defusers "1"
+spec_xray_dropped_unoccluded "1"
 ss_splitmode "0"
 store_version "1"
 suitvolume "0.25"
@@ -431,7 +431,7 @@ triple_monitor_mode "0"
 tv_nochat "0"
 ui_inventorysettings_recently_acknowledged ""
 ui_nearbylobbies_filter2 "competitive"
-ui_news_last_read_link "https://blog.counter-strike.net/de/index.php/2019/12/27585/"
+ui_news_last_read_link "https://blog.counter-strike.net/de/index.php/2020/02/28757/"
 ui_playsettings_maps_listen_casual "random_classic"
 ui_playsettings_maps_listen_competitive "random_classic"
 ui_playsettings_maps_listen_deathmatch "random_classic"
@@ -452,9 +452,9 @@ ui_vanitysetting_loadoutslot_ct "rifle2"
 ui_vanitysetting_loadoutslot_t "melee"
 ui_vanitysetting_team "t"
 vgui_message_dialog_modal "1"
-viewmodel_fov "54"
-viewmodel_offset_x "2.5"
-viewmodel_offset_y "2"
+viewmodel_fov "68"
+viewmodel_offset_x "1.5"
+viewmodel_offset_y "-2"
 viewmodel_offset_z "-2"
 viewmodel_presetpos "1"
 viewmodel_recoil "0"
@@ -467,10 +467,10 @@ voice_mixer_mute "0"
 voice_mixer_volume "0.50"
 voice_modenable "1"
 voice_positional "0"
-voice_scale "0.15"
+voice_scale "0.12"
 voice_system_enable "1"
 voice_threshold "4000"
-volume "0.5"
+volume "0.35"
 vprof_graphheight "256"
 vprof_graphwidth "512"
 vprof_unaccounted_limit "0.3"
