--- a/autoexec.cfg
+++ b/autoexec.cfg
@@ -1,69 +1,56 @@
 //autoexec.cfg
 
+cl_clanid 0
+
 //sensitivity
-sensitivity "1.7"
+sensitivity "2.5"
 zoom_sensitivity_ratio_mouse "1"
 
-//clanid
-cl_clanid "36376513" // none = "0"
-
 //crosshair
-cl_crosshairalpha 255
-cl_crosshaircolor 4
-cl_crosshairdot 0
-cl_crosshairgap -2
-cl_crosshairsize 1.5
-cl_crosshairstyle 5
-cl_crosshairusealpha 1
-cl_crosshairthickness 0
-cl_crosshair_drawoutline 0; cl_crosshair_sniper_width 1; cl_crosshaircolor_b 144; cl_crosshaircolor_g 195; cl_crosshaircolor_r 27;
-
+cl_crosshairalpha 250; cl_crosshaircolor 4; cl_crosshaircolor_b 165; cl_crosshaircolor_g 255; cl_crosshaircolor_r 0; cl_crosshairdot 1; cl_crosshairgap -3; cl_crosshairsize 1; cl_crosshairstyle 4; cl_crosshairthickness 0; cl_crosshairusealpha 1;
 //viewmodel
 viewmodel_fov 68
-viewmodel_presetpos 1
-viewmodel_offset_x 2
-viewmodel_offset_y 2
+viewmodel_offset_x 2.5
+viewmodel_offset_y -2
 viewmodel_offset_z -2
 cl_viewmodel_shift_left_amt 1.5
 cl_viewmodel_shift_right_amt 0.75
-viewmodel_recoil 1
+viewmodel_recoil 0
 cl_righthand 1
 
 //headbob
-cl_bob_lower_amt 0
-cl_bobamt_lat 0.0
-cl_bobamt_vert 0.0
-cl_bobcycle 0.0
-cl_viewmodel_shift_right_amt 0
-cl_viewmodel_shift_left_amt 0
-
+cl_bob_lower_amt 5; cl_bobamt_lat 0.1; cl_bobamt_vert 0.1; cl_bobcycle 0.98;
 
 //misc
-cl_autowepswitch 0
-m_rawinput "1"
+cl_autowepswitch 0 
+m_rawinput "1" // Raw Input
+r_drawtracers_firstperson "0" //Tracers
+cl_showhelp "0" //disable help
+cl_autohelp "0" //disable help
+cl_disablehtmlmotd "1" //disable motd
+cl_forcepreload "0"
+cl_join_advertise "2"
+engine_no_focus_sleep 0
+
+//FPS boost
 fps_max "0"
 fps_max_menu "300"
-r_drawtracers_firstperson "0"
-r_eyegloss "0"
-cl_showloadout 0
-cl_autohelp "0"
-cl_disablehtmlmotd "0"
-cl_showhelp "0"
-r_dynamic "0"
 joystick "0"
-cl_forcepreload "0"
-cl_join_advertise 2
-sv_holiday_mode 0
-cl_mute_enemy_team 0
-engine_no_focus_sleep 0 
+r_eyegloss "0" // No Makeup.
+r_eyemove "0" // No Eye Movement.
+r_eyeshift_x "0" // No Eye Movement X-Angle.
+r_eyeshift_y "0" // No Eye Movement Y-Angle.
+r_eyeshift_z "0" // No Eye Movement Z-Angle.
+r_eyesize "0" // Smaller Eyes.
 
 //buymenu
 cl_buywheel_nomousecentering 1
 cl_buywheel_nonumberpurchasing 1
 
 //sound
-voice_mixer_volume "0.50"
+voice_mixer_volume "0.5"
 volume "0.35"
+voice_scale "0.2"
 dsp_enhance_stereo "0"
 snd_mixahead "0.025"
 snd_pitchquality "1"
@@ -73,9 +60,10 @@ snd_menumusic_volume "0.0"
 snd_mvp_volume "0.0"
 snd_roundend_volume "0."
 snd_roundstart_volume "0.0"
-snd_tensecondwarning_volume "0.0"
-voice_scale "0.12"
+snd_tensecondwarning_volume "0"
 snd_mute_losefocus "0"
+snd_front_headphone_position 45
+snd_rear_headphone_position 135
 
 //hud
 cl_hud_color 1
@@ -84,8 +72,7 @@ cl_hud_playercount_pos 1
 cl_hud_playercount_showcount 1
 hud_scaling 0.95
 cl_hud_healthammo_style 1
-
-//radar
+cl_showloadout 1 // 1 =  Equipment rechts dauerhaft anzeigen | 0 = ausblenden nach paar sekunden
 cl_hud_radar_scale 1.1	//Radar Scale
 cl_radar_scale 0.45 //Radar zoom
 cl_radar_icon_scale_min 1.25
@@ -100,11 +87,11 @@ cl_interp_ratio "1"
 cl_cmdrate "128"
 cl_updaterate "128"
 rate "786432"
-//
+
 net_graphheight 0
 net_graphproportionalfont 0
 net_graphpos 1
-net_graph 0
+net_graph 1
 
 //binds
 bind mwheeldown +jump
