--- a/autoexec.cfg
+++ b/autoexec.cfg
@@ -3,20 +3,12 @@
 cl_clanid 0
 
 //sensitivity
-sensitivity "2.5"
+sensitivity "1.6"
 zoom_sensitivity_ratio_mouse "1"
 
-//crosshair
-cl_crosshairalpha 250; cl_crosshaircolor 4; cl_crosshaircolor_b 165; cl_crosshaircolor_g 255; cl_crosshaircolor_r 0; cl_crosshairdot 1; cl_crosshairgap -3; cl_crosshairsize 1; cl_crosshairstyle 4; cl_crosshairthickness 0; cl_crosshairusealpha 1;
-//viewmodel
-viewmodel_fov 68
-viewmodel_offset_x 2.5
-viewmodel_offset_y -2
-viewmodel_offset_z -2
-cl_viewmodel_shift_left_amt 1.5
-cl_viewmodel_shift_right_amt 0.75
-viewmodel_recoil 0
-cl_righthand 1
+cl_crosshairalpha 250; cl_crosshaircolor 5; cl_crosshaircolor_r 255; cl_crosshaircolor_g 0; cl_crosshaircolor_b 0; cl_crosshairdot 1; cl_crosshairgap -4; cl_crosshairsize 1; cl_crosshairstyle 5; cl_crosshairthickness 0; cl_crosshairusealpha 1;
+
+viewmodel_fov 65; viewmodel_offset_x 2; viewmodel_offset_y 1.5; viewmodel_offset_z -1; viewmodel_presetpos 0; cl_viewmodel_shift_left_amt 1.5; cl_viewmodel_shift_right_amt 0.75; viewmodel_recoil 1; cl_righthand 1;
 
 //headbob
 cl_bob_lower_amt 5; cl_bobamt_lat 0.1; cl_bobamt_vert 0.1; cl_bobcycle 0.98;
@@ -33,7 +25,7 @@ cl_join_advertise "2"
 engine_no_focus_sleep 0
 
 //FPS boost
-fps_max "0"
+fps_max "700"
 fps_max_menu "300"
 joystick "0"
 r_eyegloss "0" // No Makeup.
@@ -49,7 +41,7 @@ cl_buywheel_nonumberpurchasing 1
 
 //sound
 voice_mixer_volume "0.5"
-volume "0.35"
+volume "0.5"
 voice_scale "0.2"
 dsp_enhance_stereo "0"
 snd_mixahead "0.025"
@@ -73,7 +65,7 @@ cl_hud_playercount_showcount 1
 hud_scaling 0.95
 cl_hud_healthammo_style 1
 cl_showloadout 1 // 1 =  Equipment rechts dauerhaft anzeigen | 0 = ausblenden nach paar sekunden
-cl_hud_radar_scale 1.1	//Radar Scale
+cl_hud_radar_scale 1	//Radar Scale
 cl_radar_scale 0.45 //Radar zoom
 cl_radar_icon_scale_min 1.25
 cl_radar_always_centered 1
@@ -91,13 +83,15 @@ rate "786432"
 net_graphheight 0
 net_graphproportionalfont 0
 net_graphpos 1
-net_graph 1
+net_graph 0
 
 //binds
+unbind y
+bind i messagemode //chat
 bind mwheeldown +jump
 bind mwheelup slot10
-bind a "+moveleft;r_cleardecals;+cl_show_team_equipment"
-bind d "+moveright;r_cleardecals;+cl_show_team_equipment"
+bind a "+moveleft;r_cleardecals"
+bind d "+moveright;r_cleardecals"
 bind x radio1
 bind mouse4 +lookatweapon
 bind "t" "use weapon_knife; use weapon_flashbang;"
